[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datacleanenv-x"
version = "0.1.0"
description = "OpenEnv Data Cleaning Environment"
authors = [
  { name = "DCX Team" }
]
dependencies = [
  "pandas",
  "numpy",
  "pydantic",
  "fastapi",
  "uvicorn",
  "openai",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["env", "tasks", "graders", "reward", "server"]
